--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 description = "{{ cookiecutter.project_description }}"
 readme = "README.md"
 authors = [
-    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
+    { name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}" }
 ]
 maintainers = [
-    { name = "VictorF13", email = "victorabreuf13@gmail.com" }
+    { name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}" }
 ]
 requires-python = ">=3.12"
 license = { text = "MIT" }
