--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -20,3 +20,8 @@ build-backend = "hatchling.build"
 [tool.ruff]
 lint.extend-select = ["ALL"]
 lint.ignore = ["PLR0913", "D203", "D213", "COM812"]
+
+[tool.basedpyright]
+include = ["src"]
+typeCheckingMode = "recommended"
+
