--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -21,3 +21,8 @@ build-backend = "hatchling.build"
 lint.extend-select = ["ALL"]
 lint.ignore = ["PLR0913", "D203", "D213", "COM812"]
 
+[tool.ty]
+src.include = ["src", "tests"]
+rules.division-by-zero = "warn"
+rules.possibly-unresolved-reference = "warn"
+rules.unused-ignore-comment = "warn"
