--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
-*/__pycache__/*
+# Python
+__pycache__/
+*.py[oc]
+*.pyd
+*.so
+*.egg-info/
+build/
+dist/
+wheels/
+.eggs/
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+.coverage
+coverage.xml
+htmlcov/
+
+# Virtual environments
+.venv/
+venv/
+.env
+
+# Editors
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+
+# Node (if ever used for tooling)
+node_modules/
