--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,11 @@ maintainers = [
 ]
 requires-python = ">=3.14"
 license = { text = "MIT" }
-dependencies = [
-    "jinja2>=3.1.6",
-]
+dependencies = []
 
 [tool.ruff]
 lint.extend-select = ["ALL"]
-lint.ignore = ["PLR0913", "D203", "D213", "COM812", "N999"]
-exclude = [
-  "{{cookiecutter.project_slug}}",
-]
+lint.ignore = ["PLR0913", "D203", "D213", "COM812"]
 
 [tool.ty]
 src.include = ["src", "tests"]
@@ -30,6 +25,7 @@ rules.unused-ignore-comment = "warn"
 
 [dependency-groups]
 dev = [
+    "jinja2>=3.1.6",
     "prek>=0.3.1",
     "ruff>=0.14.14",
     "ty>=0.0.14",
